# Rhythmic-diffusion

./: .gitignore  CMakeLists.txt  README.md  computeShader.cs  start.sh
inc/: include.hpp
presets/: 0contor-0.preset  0contor-1.preset  0contor-2.preset  0contor-3.preset  0contor-4.preset  0contor-5.preset  0mush-0.preset  0mush-1.preset  0mush-10.preset  0mush-11.preset  0mush-12.preset  0mush-2.preset  0mush-3.preset  0mush-4.preset  0mush-5.preset  0mush-6.preset  0mush-7.preset  0mush-8.preset  0mush-9.preset  0mush-z10.preset  0mush-z11.preset  0mush-z12.preset  0wide-instruction-0.preset  0wide-instruction-1.preset  0wide-instruction-2.preset  0wide-instruction-3.preset  0wide-instruction-4.preset  0wide-instruction-5.preset  0wide-instruction-6.preset  0wide-instruction-7.preset  ???.preset  ??????.preset  another thing to dig.preset  blobby.preset  cassie-0.preset  cassie-1.preset  example.preset  four-three-0.preset  four-three-1.preset  four-three-2.preset  (+29 more)
src/: Adapter.cpp  Adapter.hpp  Application.cpp  Application.hpp  AudioAnalyzer.cpp  AudioAnalyzer.hpp  AudioPlayer.cpp  AudioPlayer.hpp  ComputeShader.cpp  ComputeShader.hpp  InputParameter.cpp  InputParameter.hpp  InputParameterSettings.hpp  Object.cpp  Object.hpp  Preset.cpp  Preset.hpp  ReactionDiffusionSimulator.cpp  ReactionDiffusionSimulator.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
src/Audio/: AudioAnalyzer.cpp  AudioAnalyzer.hpp  AudioPlayer.cpp  AudioPlayer.hpp  SoundGroup.cpp  SoundGroup.hpp
src/Graphic/: ComputeShader.hpp  InputParameter.cpp  InputParameter.hpp  Object.hpp  ReactionDiffusionSimulator.cpp  ReactionDiffusionSimulator.hpp  Shader.hpp  Texture.hpp
src/Graphic/OpenGlHelper/: ComputeShader.cpp  ComputeShader.hpp  Object.hpp  Shader.hpp  Texture.hpp
src/Graphic/ReactionDiffusion/: InitialConditions.cpp  InitialConditions.hpp  InputParameter.cpp  InputParameter.hpp  PostProcessing.cpp  PostProcessing.hpp  ReactionDiffusionSimulator.cpp  ReactionDiffusionSimulator.hpp
src/UserInterface/: AudioPlayerUI.cpp  AudioPlayerUI.hpp  GradientUI.cpp  GradientUI.hpp  HooksUI.cpp  HooksUI.hpp  InitialConditionsUI.cpp  InitialConditionsUI.hpp  PresetUI.cpp  PresetUI.hpp  RDOptionsUI.cpp  RDOptionsUI.hpp  UserInterface.cpp  UserInterface.hpp
src/shaders/: computeShader.cs  display.comp  display.cs  input1.cs  inputCircle.cs  numberInput.cs  shader.frag  shader.vert  voronoi.cs
src/shaders/initialConditions/: circle.comp  glslSpec.comp  hexagon.comp  initialConditionsMain.comp  rectangle.comp  square.comp  triangle.comp
src/shaders/input/: circle.comp  hexagon.comp  perlin.comp  triangle.comp
src/shaders/parameters/: glslParametersSpec.comp  number.comp  parametersMain.comp  perlin.comp  voronoi.comp
src/shaders/reactionDiffusion/: grayScott.comp  mutipleNeighborhood.comp
